Fixed some bugs with negative width and heights

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ To change this template use Tools | Templates.
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title></title>
+    <title>Map Editor</title>
 </head>
 <body>
 <canvas id="myCanvas" width="1120px" height="590px" style="border:1px solid black"></canvas>
