Fixed some bugs with negative width and heights

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@ To change this template use Tools | Templates.
     <button onclick="mouse.type='goal'">
         Goal
     </button>
+    <button onclick="mouse.type='start'">
+        Player Start
+    </button>
     <button onclick="returnLevel()">
         EXPORT LEVEL
     </button>
