added undo button

--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@ To change this template use Tools | Templates.
     <button onclick="mouse.type='start'">
         Player Start
     </button>
+    <button onclick="undo()">
+        Undo
+    </button>
     <button onclick="returnLevel()">
         EXPORT LEVEL
     </button>
