added more precision and abillity to edit maps that have been created

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@ To change this template use Tools | Templates.
     <button onclick="undo()">
         Undo
     </button>
+    <button onclick="load()">
+        Load
+    </button>
     <button onclick="returnLevel()">
         EXPORT LEVEL
     </button>
